--- a/src/index.css
+++ b/src/index.css
@@ -1,24 +1,37 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 body {
-  /* font-family: "Montserrat", serif; */
+  scroll-behavior: smooth;
   font-family: "Roboto", serif;
 }
 
-/* .swiper {
+
+/* mobile menu  */
+.kitchen-menu li {
   width: 100%;
-  height: 100%;
-} */
-
-.swiper-slide {
-  background-position: center;
-  background-size: cover;
+  margin: 5px 0 5px 0;
 }
-
-.swiper-slide img {
+.kitchen-menu > li > .active {
+  color: #f97316;
+  background-color: rgb(233, 233, 233);
   display: block;
-  width: 100%;
+  text-decoration: underline;
+  border-radius: 5px;
+  padding: 5px 0px 5px 8px;
+  transition: all 0.3s ease-in-out;
 }
+
+.flex-menu > li > a {
+  margin: 0 15px 0 15px;
+}
+.flex-menu > li > .active {
+  color: #f97316;
+  font-weight: 500;
+  text-decoration: underline;
+  transition: all 0.3s ease-in-out;
+}
+
+
