--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,6 @@ body {
   font-family: "Roboto", serif;
 }
 
-
 /* mobile menu  */
 .kitchen-menu li {
   width: 100%;
@@ -18,6 +17,17 @@ body {
   color: #f97316;
   background-color: rgb(233, 233, 233);
   display: block;
+  font-weight: 500;
+  text-decoration: underline;
+  border-radius: 5px;
+  padding: 5px 0px 5px 8px;
+  transition: all 0.3s ease-in-out;
+}
+.kitchen-menu > li > a:hover {
+  color: #f97316;
+  background-color: rgb(233, 233, 233);
+  display: block;
+  font-weight: 500;
   text-decoration: underline;
   border-radius: 5px;
   padding: 5px 0px 5px 8px;
@@ -33,5 +43,3 @@ body {
   text-decoration: underline;
   transition: all 0.3s ease-in-out;
 }
-
-
